<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="add_new_colour">ADD NEW    COLOUR</string>
    <string name="enter_new_colour">Enter new colour</string>
    <string name="enter_position_number">Enter position number</string>
    <string name="remove_a_colour">Remove A Colour</string>
    <string name="update_a_colour">Update A Colour</string>
</resources>