<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_new_colour"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_position_number"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAdditem"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:text="@string/add_new_colour" />

        <Button
            android:id="@+id/buttonRemoveitem"
            android:layout_width="123dp"
            android:layout_height="68dp"
            android:text="@string/remove_a_colour" />

        <Button
            android:id="@+id/buttonUpdateitem"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/update_a_colour" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewColour"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
